# prompt-forge

./: .env.example  .gitignore  .prompt_forge_ui.json  LICENSE  README.md  cv_ranker.py  pyproject.toml
.github/workflows/: build-cv-ranker.yml  ci.yml  release.yml
docs/: concepts.md  quickstart.md
docs/reference/: bundle.md  caching.md  evaluators.md  inference_agent.md  retrievers.md  storage.md  training_config.md
examples/extraction_example/schema/: expected_output.json
examples/extraction_example/spec_01/: expected_output.json  input.txt
examples/extraction_example/spec_02/: expected_output.json  input.txt
examples/extraction_example/spec_03/: expected_output.json  input.txt
examples/extraction_example/spec_04/: expected_output.json  input.txt
examples/extraction_example/spec_05/: expected_output.json  input.txt
examples/extraction_example/spec_06/: expected_output.json  input.txt
examples/extraction_example/spec_07/: expected_output.json  input.txt
examples/extraction_example/spec_08/: expected_output.json  input.txt
examples/extraction_example/spec_09/: expected_output.json  input.txt
examples/extraction_example/spec_10/: expected_output.json  input.txt
examples/extraction_example/spec_11/: expected_output.json  input.txt
examples/extraction_example/spec_12/: expected_output.json  input.txt
examples/extraction_example/spec_13/: expected_output.json  input.txt
examples/extraction_example/spec_14/: expected_output.json  input.txt
examples/extraction_example/spec_15/: expected_output.json  input.txt
examples/extraction_example/spec_16/: expected_output.json  input.txt
examples/extraction_example/spec_17/: expected_output.json  input.txt
examples/extraction_example/spec_18/: expected_output.json  input.txt
examples/extraction_example/spec_19/: expected_output.json  input.txt
examples/extraction_example/spec_20/: expected_output.json  input.txt
examples/technical_spec_example/spec_01/: expected_output.json  input.txt
examples/technical_spec_example/spec_02/: expected_output.json  input.txt
examples/technical_spec_example/spec_03/: expected_output.json  input.txt
examples/technical_spec_example/spec_04/: expected_output.json  input.txt
examples/technical_spec_example/spec_05/: expected_output.json  input.txt
examples/technical_spec_example/spec_06/: expected_output.json  input.txt
examples/technical_spec_example/spec_07/: expected_output.json  input.txt
examples/technical_spec_example/spec_08/: expected_output.json  input.txt
examples/technical_spec_example/spec_09/: expected_output.json  input.txt
examples/technical_spec_example/spec_10/: expected_output.json  input.txt
examples/technical_spec_example/spec_11/: expected_output.json  input.txt
examples/technical_spec_example/spec_12/: expected_output.json  input.txt
examples/technical_spec_example/spec_13/: expected_output.json  input.txt
examples/technical_spec_example/spec_14/: expected_output.json  input.txt
examples/technical_spec_example/spec_15/: expected_output.json  input.txt
examples/technical_spec_example/spec_16/: expected_output.json  input.txt
examples/technical_spec_example/spec_17/: expected_output.json  input.txt
examples/technical_spec_example/spec_18/: expected_output.json  input.txt
examples/technical_spec_example/spec_19/: expected_output.json  input.txt
notebooks/: custom-batch-strategy.ipynb  cv-ranking-example.ipynb  example-usage-sqlite-storage.ipynb  example-usage.ipynb  ironworks-offer-automation.ipynb
prompt_forge/: __init__.py  _retry.py  bundle.py  caching.py  project.py  retrievers.py  utils.py
prompt_forge/app/: __init__.py  llm.py  main.py  state.py
prompt_forge/evaluation/: __init__.py  evaluator.py
prompt_forge/file_loaders/: __init__.py  loader.py
prompt_forge/inference/: __init__.py  agent.py
prompt_forge/interactive/: __init__.py  optimizer.py
prompt_forge/llm/: client.py
prompt_forge/storage/: __init__.py  project_store.py
prompt_forge/training/: __init__.py  batch_strategy.py  optimizer.py  pipeline.py  prompt.py  training_log.py
tests/: test_bundle.py  test_caching.py  test_concurrency.py  test_context_retriever.py  test_evaluation.py  test_file_loaders.py  test_native_files.py  test_pipeline_eval_train.py  test_retrievers.py  test_retry_and_optimizer_config.py  test_storage.py  test_train_loop.py  test_utils.py  test_variadic_bundles.py
(+10 files in other folders)
