[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-forge"
version = "0.1.0"
description = "Iterative, example-based prompt optimization — no fine-tuning required"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []  # Core has zero dependencies — LLM client is user-provided

[project.optional-dependencies]
pdf   = ["pdfplumber>=0.10", "pytesseract>=0.3", "Pillow>=10.0"]
excel = ["openpyxl>=3.1"]
docx  = ["python-docx>=1.0"]
all   = [
    "pdfplumber>=0.10",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "openpyxl>=3.1",
    "python-docx>=1.0",
]
app = ["streamlit>=1.36", "openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
prompt-forge-ui = "prompt_forge.app:run"

[tool.hatch.build.targets.wheel]
packages = ["prompt_forge"]

[tool.ruff]
line-length = 100
target-version = "py310"
