[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-forge-ml"
version = "0.1.0"
description = "Iterative, example-based prompt optimization — no fine-tuning required"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Niccolò Togni"}]
keywords = [
    "prompt-optimization",
    "prompt-engineering",
    "llm",
    "information-extraction",
    "document-extraction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []  # Core has zero dependencies — LLM client is user-provided

[project.urls]
Homepage = "https://github.com/NiccoloTogni/prompt-forge"
Repository = "https://github.com/NiccoloTogni/prompt-forge"
Issues = "https://github.com/NiccoloTogni/prompt-forge/issues"
Documentation = "https://github.com/NiccoloTogni/prompt-forge/tree/master/docs"

[project.optional-dependencies]
pdf        = ["pdfplumber>=0.10", "pytesseract>=0.3", "Pillow>=10.0"]
excel      = ["openpyxl>=3.1"]
docx       = ["python-docx>=1.0"]
sqlalchemy  = ["sqlalchemy>=2.0"]
duckduckgo  = ["duckduckgo-search>=6.0"]
tavily      = ["tavily-python>=0.3"]
all        = [
    "pdfplumber>=0.10",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "openpyxl>=3.1",
    "python-docx>=1.0",
    "sqlalchemy>=2.0",
    "duckduckgo-search>=6.0",
    "tavily-python>=0.3",
]
app = ["streamlit>=1.36", "openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
prompt-forge-ui = "prompt_forge.app:run"

[tool.hatch.build.targets.wheel]
packages = ["prompt_forge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
